完成合并代码开发。